--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.1.*"
+		"laravel/framework": "4.1.*",
+		"zizaco/confide": "3.1.*",
+		"zizaco/entrust": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
