--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
 		"laravel/framework": "4.1.*",
 		"laravelbook/ardent": "2.4.*",
 		"zizaco/confide": "3.1.x",
-		"zizaco/entrust": "1.1.*"
+		"intervention/image": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
