--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"laravelbook/ardent": "2.4.*",
 		"zizaco/confide": "3.1.x",
 		"intervention/image": "dev-master",
-		"intervention/imagecache": "dev-master"
+		"intervention/imagecache": "dev-master",
+		"nesbot/Carbon": "*"
 	},
 	"autoload": {
 		"classmap": [
